--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "paradise",
-    "version": "6.1.1-SNAPSHOT",
+    "version": "7.0.0-SNAPSHOT",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
@@ -12,47 +12,47 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "6.1.1",
-        "@angular/common": "6.1.1",
-        "@angular/compiler": "6.1.1",
-        "@angular/core": "6.1.1",
-        "@angular/forms": "6.1.1",
-        "@angular/http": "6.1.1",
-        "@angular/platform-browser": "6.1.1",
-        "@angular/platform-browser-dynamic": "6.1.1",
-        "@angular/router": "6.1.1",
-        "chart.js": "2.7.1",
+        "@angular/animations": "7.1.2",
+        "@angular/cdk": "7.1.1",
+        "@angular/common": "7.1.2",
+        "@angular/compiler": "7.1.2",
+        "@angular/core": "7.1.2",
+        "@angular/forms": "7.1.2",
+        "@angular/http": "7.1.2",
+        "@angular/platform-browser": "7.1.2",
+        "@angular/platform-browser-dynamic": "7.1.2",
+        "@angular/router": "7.1.2",
+        "chart.js": "2.7.3",
         "core-js": "2.5.7",
-        "font-awesome": "4.7.0",
-        "fullcalendar": "4.0.0-alpha",
+        "fullcalendar": "4.0.0-alpha.2",
         "intl": "1.2.5",
-        "moment": "2.18.1",
-        "primeicons": "1.0.0-beta.9",
-        "primeng": "6.1.2",
+        "primeng": "7.0.0",
         "quill": "1.1.8",
-        "rxjs": "6.2.2",
+        "rxjs": "6.3.3",
         "zone.js": "0.8.26",
-        "web-animations-js": "2.3.1"
+        "web-animations-js": "2.3.1",
+        "font-awesome": "4.7.0",
+        "primeicons": "1.0.0"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "6.1.1",
-        "@angular-devkit/build-angular": "0.6.8",
-        "typescript": "2.7.2",
-        "@angular/cli": "6.1.1",
-        "@angular/language-service": "6.1.1",
-        "@types/jasmine": "2.8.8",
-        "@types/jasminewd2": "2.0.3",
+        "@angular-devkit/build-angular": "0.11.2",
+        "@angular/compiler-cli": "7.1.2",
+        "@angular/cli": "7.1.2",
+        "@angular/language-service": "7.1.2",
         "@types/node": "8.9.5",
-        "codelyzer": "4.2.1",
+        "@types/jasmine": "2.8.12",
+        "@types/jasminewd2": "2.0.6",
+        "codelyzer": "4.5.0",
         "jasmine-core": "2.99.1",
         "jasmine-spec-reporter": "4.2.1",
-        "karma": "1.7.1",
+        "karma": "3.1.3",
         "karma-chrome-launcher": "2.2.0",
-        "karma-coverage-istanbul-reporter": "2.0.1",
+        "karma-coverage-istanbul-reporter": "2.0.4",
         "karma-jasmine": "1.1.2",
         "karma-jasmine-html-reporter": "0.2.2",
-        "protractor": "5.3.2",
-        "ts-node": "5.0.1",
-        "tslint": "5.9.1"
+        "protractor": "5.4.1",
+        "ts-node": "7.0.1",
+        "tslint": "5.11.0",
+        "typescript": "3.1.6"
     }
 }
