--- a/angular.json
+++ b/angular.json
@@ -1,151 +1,150 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "paradise": {
-      "root": "",
-      "sourceRoot": "src",
-      "projectType": "application",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
-            "assets": [
-              "src/assets",
-              "src/upload.php",
-              "src/favicon.ico"
-            ],
-            "styles": [
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/fullcalendar/dist/fullcalendar.min.css",
-              "node_modules/quill/dist/quill.snow.css",
-              "node_modules/font-awesome/css/font-awesome.min.css",
-                "node_modules/primeicons/primeicons.css",
-              "src/styles.scss"
-            ],
-            "scripts": [
-              "node_modules/chart.js/dist/Chart.js",
-              "node_modules/fullcalendar/dist/fullcalendar.js",
-              "node_modules/quill/dist/quill.js"
-            ]
-          },
-          "configurations": {
-            "production": {
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+        "paradise": {
+            "root": "",
+            "sourceRoot": "src",
+            "projectType": "application",
+            "prefix": "app",
+            "schematics": {},
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:browser",
+                    "options": {
+                        "outputPath": "dist/paradise",
+                        "index": "src/index.html",
+                        "main": "src/main.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "tsconfig.app.json",
+                        "aot": false,
+                        "assets": [
+                            "src/assets",
+                            "src/upload.php",
+                            "src/favicon.ico"
+                        ],
+                        "styles": [
+                            "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/@fullcalendar/core/main.min.css",
+                            "node_modules/@fullcalendar/daygrid/main.min.css",
+                            "node_modules/@fullcalendar/timegrid/main.min.css",
+                            "node_modules/quill/dist/quill.snow.css",
+                            "node_modules/font-awesome/css/font-awesome.min.css",
+                            "node_modules/primeicons/primeicons.css",
+                            "src/styles.scss"
+                        ],
+                        "scripts": [
+                            "node_modules/chart.js/dist/Chart.js",
+                            "node_modules/@fullcalendar/core/main.js",
+                            "node_modules/@fullcalendar/daygrid/main.js",
+                            "node_modules/@fullcalendar/timegrid/main.js",
+                            "node_modules/@fullcalendar/interaction/main.js",
+                            "node_modules/quill/dist/quill.js"
+                        ]
+                    },
+                    "configurations": {
+                        "production": {
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "extractCss": true,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ],
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "2mb",
+                                    "maximumError": "5mb"
+                                }
+                            ]
+                        }
+                    }
+                },
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+                        "browserTarget": "paradise:build"
+                    },
+                    "configurations": {
+                        "production": {
+                            "browserTarget": "paradise:build:production"
+                        }
+                    }
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "browserTarget": "paradise:build"
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "src/test.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "tsconfig.spec.json",
+                        "karmaConfig": "karma.conf.js",
+                        "scripts": [
+                            "node_modules/chart.js/dist/Chart.js",
+                            "node_modules/@fullcalendar/core/main.js",
+                            "node_modules/@fullcalendar/daygrid/main.js",
+                            "node_modules/@fullcalendar/timegrid/main.js",
+                            "node_modules/@fullcalendar/interaction/main.js",
+                            "node_modules/quill/dist/quill.js"
+                        ],
+                        "styles": [
+                            "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/@fullcalendar/core/main.min.css",
+                            "node_modules/@fullcalendar/daygrid/main.min.css",
+                            "node_modules/@fullcalendar/timegrid/main.min.css",
+                            "node_modules/quill/dist/quill.snow.css",
+                            "node_modules/font-awesome/css/font-awesome.min.css",
+                            "src/styles.scss"
+                        ],
+                        "assets": [
+                            "src/assets",
+                            "src/upload.php",
+                            "src/favicon.ico"
+                        ]
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "tsconfig.app.json",
+                            "tsconfig.spec.json",
+                            "e2e/tsconfig.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                },
+                "e2e": {
+                    "builder": "@angular-devkit/build-angular:protractor",
+                    "options": {
+                        "protractorConfig": "e2e/protractor.conf.js",
+                        "devServerTarget": "paradise:serve"
+                    },
+                    "configurations": {
+                        "production": {
+                            "devServerTarget": "paradise:serve:production"
+                        }
+                    }
                 }
-              ]
             }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "paradise:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "paradise:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "paradise:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-              "main": "src/test.ts",
-              "polyfills": "src/polyfills.ts",
-              "tsConfig": "src/tsconfig.spec.json",
-              "karmaConfig": "src/karma.conf.js",
-            "scripts": [
-              "node_modules/chart.js/dist/Chart.js",
-              "node_modules/fullcalendar/dist/fullcalendar.js",
-              "node_modules/quill/dist/quill.js"
-            ],
-            "styles": [
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/fullcalendar/dist/fullcalendar.min.css",
-              "node_modules/quill/dist/quill.snow.css",
-              "node_modules/font-awesome/css/font-awesome.min.css",
-              "src/styles.scss"
-            ],
-            "assets": [
-              "src/assets",
-              "src/upload.php",
-              "src/favicon.ico"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-                "**/node_modules/**"
-            ]
-          }
         }
-      }
     },
-    "paradise-e2e": {
-      "root": "",
-      "sourceRoot": "e2e",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "paradise:serve"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-              "exclude": [
-                  "**/node_modules/**"
-              ]
-          }
-        }
-      }
-    }
-  },
-  "defaultProject": "paradise",
-  "schematics": {
-    "@schematics/angular:component": {
-      "prefix": "app",
-      "styleext": "scss"
-    },
-    "@schematics/angular:directive": {
-      "prefix": "app"
-    }
-  }
+    "defaultProject": "paradise"
 }
