--- a/package.json
+++ b/package.json
@@ -12,48 +12,49 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.0.0",
-        "@angular/cdk": "8.0.0",
-        "@angular/common": "8.0.0",
-        "@angular/compiler": "8.0.0",
-        "@angular/core": "8.0.0",
-        "@angular/forms": "8.0.0",
-        "@angular/platform-browser": "8.0.0",
-        "@angular/platform-browser-dynamic": "8.0.0",
-        "@angular/router": "8.0.0",
+        "@angular/animations": "9.0.4",
+        "@angular/common": "9.0.4",
+        "@angular/compiler": "9.0.4",
+        "@angular/core": "9.0.4",
+        "@angular/forms": "9.0.4",
+        "@angular/platform-browser": "9.0.4",
+        "@angular/platform-browser-dynamic": "9.0.4",
+        "@angular/router": "9.0.4",
+        "rxjs": "6.5.4",
+        "tslib": "1.11.1",
+        "zone.js": "0.10.2",
+        "@angular/cdk": "9.1.0",
         "@fullcalendar/core": "4.0.2",
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
         "chart.js": "2.7.3",
         "intl": "1.2.5",
-        "primeng": "8.0.0",
+        "primeng": "9.0.0",
+        "primeicons": "2.0.0",
         "quill": "1.1.8",
-        "rxjs": "6.4.0",
-        "web-animations-js": "github:angular/web-animations-js#release_pr208",
-        "zone.js": "0.9.1",
-        "font-awesome": "4.7.0",
-        "primeicons": "1.0.0"
+        "web-animations-js": "^2.3.2",
+        "font-awesome": "4.7.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.800.2",
-        "@angular/compiler-cli": "8.0.0",
-        "@angular/cli": "8.0.0",
-        "@angular/language-service": "8.0.0",
-        "@types/node": "8.9.5",
-        "@types/jasmine": "3.3.13",
-        "@types/jasminewd2": "2.0.3",
-        "codelyzer": "5.1.0",
-        "jasmine-core": "3.4.0",
+        "@angular-devkit/build-angular": "0.900.4",
+        "@angular/cli": "9.0.4",
+        "@angular/compiler-cli": "9.0.4",
+        "@angular/language-service": "9.0.4",
+        "@types/node": "12.12.29",
+        "@types/jasmine": "3.5.7",
+        "@types/jasminewd2": "2.0.8",
+        "codelyzer": "5.2.1",
+        "jasmine-core": "3.5.0",
         "jasmine-spec-reporter": "4.2.1",
-        "karma": "4.1.0",
-        "karma-chrome-launcher": "2.2.0",
-        "karma-coverage-istanbul-reporter": "2.0.5",
+        "karma": "4.3.0",
+        "karma-chrome-launcher": "3.1.0",
+        "karma-coverage-istanbul-reporter": "2.1.1",
         "karma-jasmine": "2.0.1",
-        "karma-jasmine-html-reporter": "1.4.2",
-        "protractor": "5.4.2",
-        "ts-node": "7.0.1",
-        "tslint": "5.17.0",
-        "typescript": "3.4.5"
+        "karma-jasmine-html-reporter": "1.5.2",
+        "protractor": "5.4.3",
+        "ts-node": "8.3.0",
+        "tslint": "5.18.0",
+        "typescript": "3.7.5"
     }
 }
