--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,11 +4,14 @@
         "outDir": "./out-tsc/app",
         "types": []
     },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
+    "files": [
+        "src/main.ts",
+        "src/polyfills.ts"
+    ],
     "include": [
         "src/**/*.d.ts"
-    ]
+    ],
+    "angularCompilerOptions": {
+        "enableIvy": false
+    }
 }
