doc and version updated

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
                             "node_modules/quill/dist/quill.snow.css",
                             "node_modules/font-awesome/css/font-awesome.min.css",
                             "node_modules/primeicons/primeicons.css",
+                            "src/assets/demo/css/codehighlight.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
@@ -40,6 +41,7 @@
                             "node_modules/@fullcalendar/daygrid/main.js",
                             "node_modules/@fullcalendar/timegrid/main.js",
                             "node_modules/@fullcalendar/interaction/main.js",
+                            "node_modules/prismjs/prism.js",
                             "node_modules/quill/dist/quill.js"
                         ]
                     },
