--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
         "@fullcalendar/timegrid": "4.0.1",
         "chart.js": "2.7.3",
         "intl": "1.2.5",
-        "primeng": "9.0.0",
+        "primeng": "9.0.1",
         "primeicons": "2.0.0",
+        "prismjs": "1.15.0",
         "quill": "1.1.8",
         "web-animations-js": "^2.3.2",
         "font-awesome": "4.7.0"
