--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "paradise",
-    "version": "9.0.0",
+    "version": "9.0.1-SNAPSHOT",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
