--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "paradise",
-    "version": "10.0.1-SNAPSHOT",
+    "version": "10.1.0",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
