--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
     "name": "paradise",
-    "version": "11.0.1-SNAPSHOT",
+    "version": "12.0.0-SNAPSHOT",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+        "lint": "ng lint"
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~11.0.0",
-        "@angular/cdk": "~11.0.0",
-        "@angular/common": "~11.0.0",
-        "@angular/compiler": "~11.0.0",
-        "@angular/core": "~11.0.0",
-        "@angular/forms": "~11.0.0",
-        "@angular/platform-browser": "~11.0.0",
-        "@angular/platform-browser-dynamic": "~11.0.0",
-        "@angular/router": "~11.0.0",
-        "@fullcalendar/core": "4.1.0",
-        "@fullcalendar/daygrid": "4.1.0",
-        "@fullcalendar/interaction": "4.1.0",
-        "@fullcalendar/timegrid": "4.1.0",
-        "chart.js": "2.7.3",
+        "@angular/animations": "~12.0.0",
+        "@angular/cdk": "~12.0.0",
+        "@angular/common": "~12.0.0",
+        "@angular/compiler": "~12.0.0",
+        "@angular/core": "~12.0.0",
+        "@angular/forms": "~12.0.0",
+        "@angular/platform-browser": "~12.0.0",
+        "@angular/platform-browser-dynamic": "~12.0.0",
+        "@angular/router": "~12.0.0",
+        "@fullcalendar/angular": "^5.8.0",
+        "@fullcalendar/core": "^5.8.0",
+        "@fullcalendar/daygrid": "^5.8.0",
+        "@fullcalendar/interaction": "^5.8.0",
+        "@fullcalendar/timegrid": "^5.8.0",
+        "chart.js": "^3.3.2",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
-        "primeng": "11.2.0",
-        "prismjs": "1.20.0",
+        "primeng": "12.1.0",
+        "prismjs": "1.9.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "web-animations-js": "^2.3.2",
-        "zone.js": "~0.10.2"
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.1",
-        "@angular/cli": "~11.0.0",
-        "@angular/compiler-cli": "~11.0.0",
+        "@angular-devkit/build-angular": "~12.0.0",
+        "@angular/cli": "~12.0.0",
+        "@angular/compiler-cli": "~12.0.0",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "~2.0.8",
         "@types/node": "^12.11.1",
@@ -53,6 +53,6 @@
         "protractor": "~7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
-        "typescript": "~4.0.2"
+        "typescript": "~4.2.3"
     }
 }
