--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "paradise",
-    "version": "12.0.1-SNAPSHOT",
+    "version": "12.2.0",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
@@ -28,7 +28,7 @@
         "chart.js": "^3.3.2",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
-        "primeng": "12.1.0",
+        "primeng": "12.2.1",
         "prismjs": "1.9.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
