--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "paradise",
-    "version": "12.2.1-SNAPSHOT",
+    "version": "13.0.0",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
@@ -11,15 +11,15 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~12.0.0",
-        "@angular/cdk": "~12.0.0",
-        "@angular/common": "~12.0.0",
-        "@angular/compiler": "~12.0.0",
-        "@angular/core": "~12.0.0",
-        "@angular/forms": "~12.0.0",
-        "@angular/platform-browser": "~12.0.0",
-        "@angular/platform-browser-dynamic": "~12.0.0",
-        "@angular/router": "~12.0.0",
+        "@angular/animations": "~13.0.2",
+        "@angular/cdk": "~13.0.2",
+        "@angular/common": "~13.0.2",
+        "@angular/compiler": "~13.0.2",
+        "@angular/core": "~13.0.2",
+        "@angular/forms": "~13.0.2",
+        "@angular/platform-browser": "~13.0.2",
+        "@angular/platform-browser-dynamic": "~13.0.2",
+        "@angular/router": "~13.0.2",
         "@fullcalendar/angular": "^5.8.0",
         "@fullcalendar/core": "^5.8.0",
         "@fullcalendar/daygrid": "^5.8.0",
@@ -27,8 +27,8 @@
         "@fullcalendar/timegrid": "^5.8.0",
         "chart.js": "^3.3.2",
         "primeflex": "2.0.0",
-        "primeicons": "4.1.0",
-        "primeng": "12.2.1",
+        "primeicons": "~5.0.0",
+        "primeng": "~13.0.2",
         "prismjs": "1.9.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
@@ -36,9 +36,9 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~12.0.0",
-        "@angular/cli": "~12.0.0",
-        "@angular/compiler-cli": "~12.0.0",
+        "@angular-devkit/build-angular": "~13.0.2",
+        "@angular/cli": "~13.0.2",
+        "@angular/compiler-cli": "~13.0.2",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "~2.0.8",
         "@types/node": "^12.11.1",
@@ -53,6 +53,6 @@
         "protractor": "~7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
-        "typescript": "~4.2.3"
+        "typescript": "~4.4.3"
     }
 }
