--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~13.0.2",
-        "@angular/cdk": "~13.0.2",
-        "@angular/common": "~13.0.2",
-        "@angular/compiler": "~13.0.2",
-        "@angular/core": "~13.0.2",
-        "@angular/forms": "~13.0.2",
-        "@angular/platform-browser": "~13.0.2",
-        "@angular/platform-browser-dynamic": "~13.0.2",
-        "@angular/router": "~13.0.2",
+        "@angular/animations": "~13.2.0",
+        "@angular/cdk": "~13.2.0",
+        "@angular/common": "~13.2.0",
+        "@angular/compiler": "~13.2.0",
+        "@angular/core": "~13.2.0",
+        "@angular/forms": "~13.2.0",
+        "@angular/platform-browser": "~13.2.0",
+        "@angular/platform-browser-dynamic": "~13.2.0",
+        "@angular/router": "~13.2.0",
         "@fullcalendar/angular": "^5.8.0",
         "@fullcalendar/core": "^5.8.0",
         "@fullcalendar/daygrid": "^5.8.0",
@@ -27,7 +27,7 @@
         "@fullcalendar/timegrid": "^5.8.0",
         "chart.js": "^3.3.2",
         "primeflex": "3.1.2",
-        "primeicons": "~5.0.0",
+        "primeicons": "5.0.0",
         "primeng": "13.1.0",
         "prismjs": "1.9.0",
         "rxjs": "~6.6.0",
@@ -36,9 +36,9 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~13.0.2",
-        "@angular/cli": "~13.0.2",
-        "@angular/compiler-cli": "~13.0.2",
+        "@angular-devkit/build-angular": "~13.2.1",
+        "@angular/cli": "~13.2.1",
+        "@angular/compiler-cli": "~13.2.0",
         "@types/jasmine": "~3.6.0",
         "@types/jasminewd2": "~2.0.8",
         "@types/node": "^12.11.1",
