--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "paradise",
-    "version": "14.0.1",
+    "version": "15.0.0",
     "license": "PrimeNG Commercial",
     "scripts": {
         "ng": "ng",
@@ -11,24 +11,26 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~14.0.0",
-        "@angular/cdk": "~14.0.0",
-        "@angular/common": "~14.0.0",
-        "@angular/compiler": "~14.0.0",
-        "@angular/core": "~14.0.0",
-        "@angular/forms": "~14.0.0",
-        "@angular/platform-browser": "~14.0.0",
-        "@angular/platform-browser-dynamic": "~14.0.0",
-        "@angular/router": "~14.0.0",
-        "@fullcalendar/angular": "^5.8.0",
-        "@fullcalendar/core": "^5.8.0",
-        "@fullcalendar/daygrid": "^5.8.0",
-        "@fullcalendar/interaction": "^5.8.0",
-        "@fullcalendar/timegrid": "^5.8.0",
+        "@angular/animations": "^15.1.0",
+        "@angular/cdk": "^15.1.0",
+        "@angular/common": "^15.1.0",
+        "@angular/compiler": "^15.1.0",
+        "@angular/core": "^15.1.0",
+        "@angular/forms": "^15.1.0",
+        "@angular/platform-browser": "^15.1.0",
+        "@angular/platform-browser-dynamic": "^15.1.0",
+        "@angular/router": "^15.1.0",
+        "@fullcalendar/angular": "^6.0.3",
+        "@fullcalendar/core": "^6.0.3",
+        "@fullcalendar/daygrid": "^6.0.3",
+        "@fullcalendar/interaction": "^6.0.3",
+        "@fullcalendar/list": "^6.0.3",
+        "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
-        "primeflex": "^3.2.0",
-        "primeicons": "5.0.0",
-        "primeng": "14.0.0",
+        "primeflex": "^3.2.1",
+        "primeicons": "6.0.1",
+        "primeng": "15.1.1",
+        "quill": "^1.3.7",
         "prismjs": "1.9.0",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
@@ -36,23 +38,24 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~14.0.3",
-        "@angular/cli": "~14.0.3",
-        "@angular/compiler-cli": "~14.0.0",
+        "@angular-devkit/build-angular": "~15.1.0",
+        "@angular-eslint/builder": "^15.1.0",
+        "@angular-eslint/eslint-plugin": "^15.1.0",
+        "@angular-eslint/eslint-plugin-template": "^15.1.0",
+        "@angular-eslint/schematics": "^15.1.0",
+        "@angular-eslint/template-parser": "^15.1.0",
+        "@angular/cli": "^15.1.0",
+        "@angular/compiler-cli": "^15.1.0",
         "@types/jasmine": "~3.10.0",
-        "@types/jasminewd2": "~2.0.8",
         "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
-        "jasmine-core": "~3.10.0",
-        "jasmine-spec-reporter": "~5.0.0",
+        "@typescript-eslint/parser": "5.37.0",
+        "eslint": "^8.23.1",
+        "jasmine-core": "~4.0.0",
         "karma": "~6.3.0",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~3.0.3",
+        "karma-coverage": "~2.2.0",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.7.2"
+        "typescript": "~4.8.4"
     }
 }
