--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ sassdoc
 
 src/assets/theme/*.css
 src/assets/layout/css/*.css
-src/assets/demo/*.css
-src/assets/sass/theme/designer
+src/assets/**/badges.css
+src/assets/**/documentation.css
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
