--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "paradise",
+    "name": "paradise-ng",
     "version": "16.0.0",
     "license": "PrimeNG Commercial",
     "scripts": {
